Moving notes across grid views now copies notes to selected buffer, now they no longer get stuck. Zooming in and out now centers the grid box at the zoom location. Autoscrolling while playing follows the notes if they go out of pitch range, and scales properly if a user zooms in or out while playback is active.

--- a/css/example.css
+++ b/css/example.css
@@ -38,8 +38,7 @@ html,body {
 
 .gridNote {
      pointer-events: none;
-     filter: saturate(70%) brightness(150%);
-
+     filter: saturate(70%) brightness(120%);
 }
 
 #GridboxArray{
